# EPIC_extractor

./: .gitignore  EPIC_Cp.py  README.md  extractor.py  pyproject.toml  setup.py
.github/workflows/: styling.yml
epic_extractor/: __init__.py  cape.py  extractor.py  extractor5.py  thermo.py  utils.py
epic_extractor/tools/: integrate_N2.py  planet_global_properties.py
extractor/: __init__.py  extractor.py  thermo.py
